# beta_shape_pnpi

./: .gitignore  CONVENTIONS.md  DEVELOPMENT.md  README.md  TODO.md  extract_refs.py  pyproject.toml
beta_spectrum/: __init__.py  base.py  cli.py  constants.py  cw_extractor.py  fitter.py  logging_utils.py  nuclear_data.py  spectrum.py  units.py  utils.py
beta_spectrum/components/: detector_response.py  exchange.py  fermi.py  finite_size.py  phase_space.py  radiative.py  screening.py
beta_spectrum/data/: exchange_coeff.csv
data/: custom_input_example.json  hayen2017_refs.bib
docs/: 00-beta-spectrum-overview.md  01-fermi-function.md  02-phase-space.md  03-finite-size.md  04-screening-correction.md  05-exchange-correction.md  06-radiative-corrections.md  07-recoil-effects.md  08-detector-response.md  10-nuclear-structure.md  12-atomic-overlap.md  13-chemical-effects.md  Hayen2017_summary.md  README.md  refs-hayen2017.md
docs/.obsidian/: workspace.json
docs/refs/: radiative_spec.md
docs/refs/1967_Sirlin_general_properties_of_em_corrections/: summary.md
docs/refs/1986_Sirlin_verification_of_CVC/: summary.md
docs/refs/1987_Sirlin_remarks_on_OZa2_corrections/: summary.md
docs/refs/2011_Sirlin_radiative_correction_to_nu_spectrum/: summary.md
docs/refs/2017_Hayen_analytical_beta_shape/: summary.md
docs/refs/2019_Hayen_first_forbidden_transitions/: summary.md
docs/refs/2024_Paulsen_T99_beta_spectrum/: summary.md
docs/refs/2025_Song_tc99_measurement_for_g_v/: summary.md
notebooks/: conftest.py  phase_space.ipynb  smoke_test.ipynb  spec_test.ipynb  testing.ipynb
scripts/: notebook_plots.py  run_notebooks.py
tests/: conftest.py  test_cw_extractor.py  test_detector_response.py  test_exchange.py  test_fermi.py  test_finite_size.py  test_fitter.py  test_logging_utils.py  test_nuclear_data.py  test_phase_space.py  test_radiative.py  test_screening.py  test_spectrum.py
