[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "beta-spectrum"
version = "0.1.2"
description = "High-precision beta spectrum calculation for nuclear physics"
authors = [
    { name = "Evgeniy Unzhakov" }
]
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas"
]

[tool.setuptools.packages.find]
where = ["."]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "mypy",
    "mdformat",
    "mdformat-frontmatter",
    "mdformat-footnote",
    "mdformat-tables"
]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.black]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.mdformat]
line-length = 88
wrap = false
number = true
